--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plugin-core",
+  "name": "@adopisoft/plugin-core",
   "version": "1.0.0",
   "description": "Ado Plugin core",
   "main": "index.js",
