--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "plugin-core",
+  "name": "@adopisoft/plugin-core",
   "version": "1.0.0",
   "description": "Ado Plugin core",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/adopisowifi/plugin-core.git"
+    "url": "git@github.com:AdoPiSoft/plugin-core.git"
   },
   "keywords": [
     "ado",
     "plugin",
     "core"
   ],
-  "author": "arnel.lenteria@gmail.com",
+  "author": "support@adopisoft.com",
   "license": "ISC",
   "bugs": {
     "url": "https://bitbucket.org/adopisowifi/plugin-core/issues"
   },
-  "homepage": "https://bitbucket.org/adopisowifi/plugin-core#readme"
+  "homepage": "https://bitbucket.org/adopisowifi/plugin-core#readme",
+  "dependencies": {
+    "fs-extra": "^10.0.0",
+    "ini": "^2.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3"
+  }
 }
