--- a/package.json
+++ b/package.json
@@ -1,32 +1,24 @@
 {
-  "name": "@adopisoft/plugin-core",
+  "name": "plugin-core",
   "version": "1.0.0",
   "description": "Ado Plugin core",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:AdoPiSoft/plugin-core.git"
+    "url": "git+ssh://git@bitbucket.org/adopisowifi/plugin-core.git"
   },
   "keywords": [
     "ado",
     "plugin",
     "core"
   ],
-  "author": "support@adopisoft.com",
+  "author": "arnel.lenteria@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://bitbucket.org/adopisowifi/plugin-core/issues"
   },
-  "homepage": "https://bitbucket.org/adopisowifi/plugin-core#readme",
-  "dependencies": {
-    "fs-extra": "^10.0.0",
-    "ini": "^2.0.0"
-  },
-  "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.1.3"
-  }
+  "homepage": "https://bitbucket.org/adopisowifi/plugin-core#readme"
 }
